fixed address overflow

--- a/src/pages/CartPage/CartPage.css
+++ b/src/pages/CartPage/CartPage.css
@@ -10,6 +10,7 @@
   position: absolute;
     left: 5rem;
   padding-bottom: 5vh;
+  width: 62vw;
 }
 
 .apply-btn {
